Test cases update and clean up